--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       MYSQL_DATABASE: inventory_db
       MYSQL_USER: user
       MYSQL_PASSWORD: password
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: Jettson1245
     volumes:
       - db_data:/var/lib/mysql
     networks:
@@ -18,7 +18,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - SECRET_KEY=your_secret_key_here
+      - SECRET_KEY=Jettson1245
       - DB_HOST=db
       - DB_NAME=inventory_db
       - DB_USER=user
